tests/ui/feature-gates/feature-gate-panic_color_errors.stderr
error[E0658]: use of unstable library feature 'panic_color_errors'
  --> $DIR/feature-gate-panic_color_errors.rs:4:5
   |
LL |     panic::highlight_errors(true);
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(panic_color_errors)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
