tests/ui/feature-gates/feature-gate-panic_color_errors.rs
use std::panic;

fn main(){
    panic::highlight_errors(true);
    //~^ ERROR E0658
}
